--- a/index.html
+++ b/index.html
@@ -6,15 +6,46 @@
     <title>Nikki Klein</title>
   </head>
   <body>
+    <nav id="navbar">
+      <ul>
+        <li><a href="#welcome-section">Welcome</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
     <div class="main">
       <section id="welcome-section">
         <h1>
           Salut! Hola! Aloha! こんにちは! Ciao! Hallo!
         </h1>
         <h2>
-          My name is Nikki, I am a web developer
+          My name is Nikki, I'm a web developer
         </h2>
       </section>
+      <section id="projects">
+        <div class="project-tile">
+          <a href="/">
+            <img src="" alt="" />
+            <h3>
+              Project 1
+            </h3>
+          </a>
+        </div>
+        <a href="" id="profile-link"><button>Show More ></button></a>
+      </section>
+      <section id="contact">
+        <div>
+          <h1>
+            Let's get down to business
+          </h1>
+          <h3>To defeat the huns</h3>
+          <a href=""><button>LinkedIn</button></a>
+          <a href=""><button>GitHub</button></a>
+          <a href=""><button>Netlify</button></a>
+          <a href=""><button>Email</button></a>
+        </div>
+      </section>
+      <footer>Open source code by <a href="">Nikki Klein</a></footer>
     </div>
   </body>
 </html>
