added linkedin url

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Nikki Klein</title>
   </head>
   <body>
@@ -16,13 +17,14 @@
     <div class="main">
       <section id="welcome-section">
         <h1>
-          Salut! Hola! Aloha! こんにちは! Ciao! Hallo!
+          Hello! Salut! Hola! Aloha! こんにちは! Ciao! Hallo!
         </h1>
         <h2>
-          My name is Nikki, I'm a web developer
+          My name is Nikki and I'm a web developer
         </h2>
       </section>
       <section id="projects">
+        <h1>Ces sont mes projets</h1>
         <div class="project-tile">
           <a href="/">
             <img src="" alt="" />
@@ -39,7 +41,9 @@
             Let's get down to business
           </h1>
           <h3>To defeat the huns</h3>
-          <a href=""><button>LinkedIn</button></a>
+          <a href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
+            ><button>LinkedIn</button></a
+          >
           <a href=""><button>GitHub</button></a>
           <a href=""><button>Netlify</button></a>
           <a href=""><button>Email</button></a>
