added github url

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
           <a href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
             ><button>LinkedIn</button></a
           >
-          <a href=""><button>GitHub</button></a>
+          <a href="https://github.com/streetlightkids"
+            ><button>GitHub</button></a
+          >
           <a href=""><button>Netlify</button></a>
           <a href=""><button>Email</button></a>
         </div>
