added netlify url

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
           <a href="https://github.com/streetlightkids"
             ><button>GitHub</button></a
           >
-          <a href=""><button>Netlify</button></a>
+          <a href="https://app.netlify.com/teams/streetlightkids/sites"
+            ><button>Netlify</button></a
+          >
           <a href=""><button>Email</button></a>
         </div>
       </section>
