--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a href="https://app.netlify.com/teams/streetlightkids/sites"
             ><button>Netlify</button></a
           >
-          <a href=""><button>Email</button></a>
+          <a href="mailto:kleinlikecalvin1@gmail.com"><button>Email</button></a>
         </div>
       </section>
       <footer>Open source code by <a href="">Nikki Klein</a></footer>
