added codepen url to projects section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             </h3>
           </a>
         </div>
-        <a href="" id="profile-link"><button>Show More ></button></a>
+        <a href="https://codepen.io/streetlightkids" id="profile-link"
+          ><button>Show More ></button></a
+        >
       </section>
       <section id="contact">
         <div>
