--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Nikki Klein</title>
   </head>
   <body>
