adjusted background img css

--- a/index.html
+++ b/index.html
@@ -18,13 +18,45 @@
     <title>Nikki Klein</title>
   </head>
   <body>
-    <nav id="navbar">
-      <ul>
-        <li><a href="#welcome-section">Welcome</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-light sticky-top"
+      id="navbar"
+    >
+      <a class="navbar-brand" href="#"
+        ><img
+          src="https://www.nicepng.com/png/detail/2-29924_free-glasses-icon-svg.png"
+          alt="Glasses icon"
+          id="glasses-icon"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#welcome-section"
+              >Welcome <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
     </nav>
+
     <div class="main">
       <section id="welcome-section">
         <h1>
