adjusting project tile section

--- a/index.html
+++ b/index.html
@@ -67,15 +67,23 @@
         </h2>
       </section>
       <section id="projects">
-        <h1>Ces sont mes projets</h1>
-        <div class="project-tile">
-          <a href="/">
-            <img src="" alt="" />
-            <h3>
-              Project 1
-            </h3>
-          </a>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a href="https://reacting-with-weather-the-app.netlify.app">
+                <img
+                  src="https://i.ibb.co/yBQTZ4T/React-Weather-App-Icon.png"
+                  alt="React Weather App Icon"
+                />
+                <h3>
+                  React Weather App
+                </h3>
+              </a>
+            </div>
+          </div>
         </div>
+        <h1>Ces sont mes projets</h1>
+
         <a href="https://codepen.io/streetlightkids" id="profile-link"
           ><button>Show More ></button></a
         >
@@ -83,9 +91,9 @@
       <section id="contact">
         <div>
           <h1>
-            Let's get down to business
+            I'm looking for work
           </h1>
-          <h3>To defeat the huns</h3>
+          <h3>Contact me</h3>
           <a href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
             ><button>LinkedIn</button></a
           >
