--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         </h2>
       </section>
       <section id="projects">
+        <h1>Ces sont mes projets</h1>
         <div class="row">
           <div class="col-sm-4">
             <div class="project-tile">
@@ -81,8 +82,33 @@
               </a>
             </div>
           </div>
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a href="https://product-landing-fcc-project.netlify.app"
+                ><img
+                  src="https://i.ibb.co/xFcchjP/Hamboards-Product-Landing-Page-Project.png"
+                  alt="Hamboards product landing page icon"
+                />
+                <h3>
+                  Product Landing Page
+                </h3>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a href="https://weatherappproject.netlify.app">
+                <img
+                  src="https://i.ibb.co/SXLqxXr/What-s-The-Weather.png"
+                  alt="Weather App icon"
+                />
+                <h3>
+                  Weather App
+                </h3>
+              </a>
+            </div>
+          </div>
         </div>
-        <h1>Ces sont mes projets</h1>
 
         <a href="https://codepen.io/streetlightkids" id="profile-link"
           ><button>Show More ></button></a
