added new row and another project href

--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a href="https://github.com/streetlightkids/tribute-page-project">
+                <img
+                  src="https://i.ibb.co/bby5Sxb/Streetlight-Manifesto.png"
+                  alt="Streetlight-Manifesto"
+                />
+                <h3>
+                  Tribute Page
+                </h3>
+              </a>
+            </div>
+          </div>
+        </div>
 
         <a href="https://codepen.io/streetlightkids" id="profile-link"
           ><button>Show More ></button></a
