--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#projects-section">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="#contact-section">Contact</a>
           </li>
         </ul>
       </div>
@@ -64,7 +64,7 @@
         My name is Nikki and I'm a web developer
       </h2>
     </section>
-    <section id="projects">
+    <section id="projects-section">
       <h1>Ces sont mes projets</h1>
       <div class="row">
         <div class="col-sm-4">
@@ -127,7 +127,7 @@
         ><button>Show More ></button></a
       >
     </section>
-    <section id="contact">
+    <section id="contact-section">
       <div>
         <h1>
           I'm looking for work
