--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
     <section id="welcome-section">
       <h1>
-        Hello! Salut! Hola! Aloha! こんにちは! Ciao! Hallo!
+        Hello! Salut! Hola! Ciao! Hallo! こんにちは! Aloha!
       </h1>
       <h2>
         My name is Nikki and I'm a web developer
@@ -122,16 +122,22 @@
           </div>
         </div>
       </div>
-
-      <a href="https://codepen.io/streetlightkids"
-        ><button>Show More ></button></a
-      >
+      <div class="row">
+        <a href="https://codepen.io/streetlightkids"
+          ><button>Show More ></button></a
+        >
+      </div>
     </section>
     <section id="contact-section">
       <div>
         <h1>
-          I'm looking for work
+          About me
         </h1>
+        <p>
+          I am an artist and web developer in USA looking for remote work. I
+          enjoy learning new languages (including computer languages) and about
+          other cultures. I am proficient with HTML5, CSS3, JS, and React!
+        </p>
         <h3>Contact me</h3>
         <a href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
           ><button>LinkedIn</button></a
