--- a/index.html
+++ b/index.html
@@ -56,100 +56,106 @@
         </ul>
       </div>
     </nav>
-    <section id="welcome-section">
-      <h1>
-        Hello! Salut! Hola! Ciao! Hallo! こんにちは! Aloha!
-      </h1>
-      <h2>
-        My name is Nikki and I'm a web developer
-      </h2>
-    </section>
-    <section id="projects-section">
-      <h1>Ces sont mes projets</h1>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="project-tile">
-            <a href="https://reacting-with-weather-the-app.netlify.app">
-              <img
-                src="https://i.ibb.co/yBQTZ4T/React-Weather-App-Icon.png"
-                alt="React Weather App Icon"
-              />
-              <label for="React-Weather-App-Icon">
-                React Weather App
-              </label>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="project-tile">
-            <a href="https://product-landing-fcc-project.netlify.app"
-              ><img
-                src="https://i.ibb.co/xFcchjP/Hamboards-Product-Landing-Page-Project.png"
-                alt="Hamboards product landing page icon"
-              />
-              <label for="product-landing-page-icon">
-                Product Landing Page
-              </label>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="project-tile">
-            <a href="https://weatherappproject.netlify.app">
-              <img
-                src="https://i.ibb.co/SXLqxXr/What-s-The-Weather.png"
-                alt="Weather App icon"
-              />
-              <label for="weather-app-icon">
-                Weather App
-              </label>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="project-tile">
-            <a href="https://github.com/streetlightkids/tribute-page-project">
-              <img
-                src="https://i.ibb.co/bby5Sxb/Streetlight-Manifesto.png"
-                alt="Streetlight-Manifesto"
-              />
-              <label for="tribute-page-icon">
-                Tribute Page
-              </label>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <a href="https://codepen.io/streetlightkids"
-          ><button>Show More ></button></a
-        >
-      </div>
-    </section>
-    <section id="contact-section">
-      <div>
+    <div class="container">
+      <section id="welcome-section">
         <h1>
-          About me
+          Hello! Salut! Hola! Ciao! Hallo! こんにちは! Aloha!
         </h1>
-        <p>
-          I am an artist and web developer in USA looking for remote work. I
-          enjoy learning new languages (including computer languages) and about
-          other cultures. I am proficient with HTML5, CSS3, JS, and React!
-        </p>
-        <h3>Contact me</h3>
-        <a href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
-          ><button>LinkedIn</button></a
-        >
-        <a href="https://github.com/streetlightkids"><button>GitHub</button></a>
-        <a href="https://app.netlify.com/teams/streetlightkids/sites"
-          ><button>Netlify</button></a
-        >
-        <a href="mailto:kleinlikecalvin1@gmail.com"><button>Email</button></a>
-      </div>
-    </section>
-    <footer>Open source code by <a href="">Nikki Klein</a></footer>
+        <h2>
+          My name is Nikki and I'm a web developer
+        </h2>
+      </section>
+      <section id="projects-section">
+        <h1>Ces sont mes projets</h1>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a href="https://reacting-with-weather-the-app.netlify.app">
+                <img
+                  src="https://i.ibb.co/yBQTZ4T/React-Weather-App-Icon.png"
+                  alt="React Weather App Icon"
+                />
+                <label for="React-Weather-App-Icon">
+                  React Weather App
+                </label>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a href="https://product-landing-fcc-project.netlify.app"
+                ><img
+                  src="https://i.ibb.co/xFcchjP/Hamboards-Product-Landing-Page-Project.png"
+                  alt="Hamboards product landing page icon"
+                />
+                <label for="product-landing-page-icon">
+                  Product Landing Page
+                </label>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a href="https://weatherappproject.netlify.app">
+                <img
+                  src="https://i.ibb.co/SXLqxXr/What-s-The-Weather.png"
+                  alt="Weather App icon"
+                />
+                <label for="weather-app-icon">
+                  Weather App
+                </label>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a href="https://github.com/streetlightkids/tribute-page-project">
+                <img
+                  src="https://i.ibb.co/bby5Sxb/Streetlight-Manifesto.png"
+                  alt="Streetlight-Manifesto"
+                />
+                <label for="tribute-page-icon">
+                  Tribute Page
+                </label>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <a href="https://codepen.io/streetlightkids"
+            ><button>Show More ></button></a
+          >
+        </div>
+      </section>
+      <section id="contact-section">
+        <div>
+          <h1>
+            About me
+          </h1>
+          <p>
+            I am an artist and web developer in USA looking for remote work. I
+            enjoy learning new languages (including computer languages) and
+            about other cultures. I am proficient with HTML5, CSS3, JS, and
+            React!
+          </p>
+          <h3>Contact me</h3>
+          <a href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
+            ><button>LinkedIn</button></a
+          >
+          <a href="https://github.com/streetlightkids"
+            ><button>GitHub</button></a
+          >
+          <a href="https://app.netlify.com/teams/streetlightkids/sites"
+            ><button>Netlify</button></a
+          >
+          <a href="mailto:kleinlikecalvin1@gmail.com"><button>Email</button></a>
+        </div>
+      </section>
+      <footer>Open source code by <a href="">Nikki Klein</a></footer>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
