adjusting projects section css

--- a/index.html
+++ b/index.html
@@ -56,21 +56,24 @@
         </ul>
       </div>
     </nav>
+    <section id="welcome-section">
+      <h1>
+        Hello! Salut! Hola! Ciao! Hallo! こんにちは! Aloha!
+      </h1>
+      <h2>
+        My name is Nikki and I'm a web developer
+      </h2>
+    </section>
     <div class="container">
-      <section id="welcome-section">
-        <h1>
-          Hello! Salut! Hola! Ciao! Hallo! こんにちは! Aloha!
-        </h1>
-        <h2>
-          My name is Nikki and I'm a web developer
-        </h2>
-      </section>
       <section id="projects-section">
         <h1>Ces sont mes projets</h1>
         <div class="row">
           <div class="col-sm-4">
             <div class="project-tile">
-              <a href="https://reacting-with-weather-the-app.netlify.app">
+              <a
+                href="https://reacting-with-weather-the-app.netlify.app"
+                target="_blank"
+              >
                 <img
                   src="https://i.ibb.co/yBQTZ4T/React-Weather-App-Icon.png"
                   alt="React Weather App Icon"
@@ -83,7 +86,9 @@
           </div>
           <div class="col-sm-4">
             <div class="project-tile">
-              <a href="https://product-landing-fcc-project.netlify.app"
+              <a
+                href="https://product-landing-fcc-project.netlify.app"
+                target="_blank"
                 ><img
                   src="https://i.ibb.co/xFcchjP/Hamboards-Product-Landing-Page-Project.png"
                   alt="Hamboards product landing page icon"
@@ -96,7 +101,7 @@
           </div>
           <div class="col-sm-4">
             <div class="project-tile">
-              <a href="https://weatherappproject.netlify.app">
+              <a href="https://weatherappproject.netlify.app" target="_blank">
                 <img
                   src="https://i.ibb.co/SXLqxXr/What-s-The-Weather.png"
                   alt="Weather App icon"
@@ -111,7 +116,10 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="project-tile">
-              <a href="https://github.com/streetlightkids/tribute-page-project">
+              <a
+                href="https://github.com/streetlightkids/tribute-page-project"
+                target="_blank"
+              >
                 <img
                   src="https://i.ibb.co/bby5Sxb/Streetlight-Manifesto.png"
                   alt="Streetlight-Manifesto"
@@ -123,11 +131,11 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <a href="https://codepen.io/streetlightkids"
+        <span>
+          <a href="https://codepen.io/streetlightkids" target="_blank"
             ><button>Show More ></button></a
           >
-        </div>
+        </span>
       </section>
       <section id="contact-section">
         <div>
@@ -141,16 +149,22 @@
             React!
           </p>
           <h3>Contact me</h3>
-          <a href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
+          <a
+            href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
+            target="_blank"
             ><button>LinkedIn</button></a
           >
-          <a href="https://github.com/streetlightkids"
+          <a href="https://github.com/streetlightkids" target="_blank"
             ><button>GitHub</button></a
           >
-          <a href="https://app.netlify.com/teams/streetlightkids/sites"
+          <a
+            href="https://app.netlify.com/teams/streetlightkids/sites"
+            target="_blank"
             ><button>Netlify</button></a
           >
-          <a href="mailto:kleinlikecalvin1@gmail.com"><button>Email</button></a>
+          <a href="mailto:kleinlikecalvin1@gmail.com" target="_blank"
+            ><button>Email</button></a
+          >
         </div>
       </section>
       <footer>Open source code by <a href="">Nikki Klein</a></footer>
