--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="./styles.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=VT323&display=swap"
       rel="stylesheet"
     />
 
@@ -57,18 +57,27 @@
       </div>
     </nav>
     <section id="welcome-section">
-      <h1>
-        Hello.Salut
-        <br />
-        Hola.Ciao
-        <br />
-        Hallo.こんにちは
-        <br />
-        Aloha
-      </h1>
-      <h2>
-        My name is Nikki and I'm a web developer
-      </h2>
+      <div class="welcome">
+        <h1>
+          Hello World.
+          <br />
+          Salut Monde.
+          <br />
+
+          Ciao Mondo.
+          <br />
+
+          Hola Mundo.
+          <br />
+
+          こんにちは 世間
+          <br />
+          Aloha Honua.
+        </h1>
+        <h2>
+          My name is Nikki and I'm a web developer.
+        </h2>
+      </div>
     </section>
     <div class="container">
       <section id="projects-section">
