remove main-container padding
update container to main-container

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </h2>
       </div>
     </section>
-    <div class="container">
+    <div class="main-container">
       <section id="projects-section">
         <div class="projex">
           <h1>Ces sont mes projets</h1>
