updated projects section h1 and removed bottom row

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="main-container">
       <section id="projects-section">
         <div class="projex">
-          <h1>Ces sont mes projets</h1>
+          <h1>Recent Projects</h1>
           <div class="row">
             <div class="col-sm-4">
               <div class="project-tile">
@@ -124,24 +124,6 @@
                   />
                   <label for="weather-app-icon">
                     Weather App
-                  </label>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="project-tile">
-                <a
-                  href="https://github.com/streetlightkids/tribute-page-project"
-                  target="_blank"
-                >
-                  <img
-                    src="https://i.ibb.co/bby5Sxb/Streetlight-Manifesto.png"
-                    alt="Streetlight-Manifesto"
-                  />
-                  <label for="tribute-page-icon">
-                    Tribute Page
                   </label>
                 </a>
               </div>
