messing with css still

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -152,22 +151,26 @@
             </div>
             <div class="col-md-6">
               <h1>My Links</h1>
-              <a
-                href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
-                target="_blank"
-                ><button>LinkedIn</button></a
-              >
-              <a href="https://github.com/streetlightkids" target="_blank"
-                ><button>GitHub</button></a
-              >
-              <a
-                href="https://app.netlify.com/teams/streetlightkids/sites"
-                target="_blank"
-                ><button>Netlify</button></a
-              >
-              <a href="mailto:kleinlikecalvin1@gmail.com" target="_blank"
-                ><button>Email</button></a
-              >
+              <div class="links">
+                <a
+                  href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
+                  target="_blank"
+                  ><button>LinkedIn</button></a
+                >
+                <a href="https://github.com/streetlightkids" target="_blank"
+                  ><button>GitHub</button></a
+                >
+
+                <a
+                  href="https://app.netlify.com/teams/streetlightkids/sites"
+                  target="_blank"
+                  ><button>Netlify</button></a
+                >
+
+                <a href="mailto:kleinlikecalvin1@gmail.com" target="_blank"
+                  ><button>Email</button></a
+                >
+              </div>
             </div>
           </div>
         </div>
