--- a/index.html
+++ b/index.html
@@ -155,20 +155,20 @@
                 <a
                   href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
                   target="_blank"
-                  ><button>LinkedIn</button></a
+                  ><button>LinkedIn ></button></a
                 >
                 <a href="https://github.com/streetlightkids" target="_blank"
-                  ><button>GitHub</button></a
+                  ><button>GitHub ></button></a
                 >
 
                 <a
                   href="https://app.netlify.com/teams/streetlightkids/sites"
                   target="_blank"
-                  ><button>Netlify</button></a
+                  ><button>Netlify ></button></a
                 >
 
                 <a href="mailto:kleinlikecalvin1@gmail.com" target="_blank"
-                  ><button>Email</button></a
+                  ><button>Email ></button></a
                 >
               </div>
             </div>
