--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="./styles.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=VT323&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Montserrat&family=PT+Sans&family=VT323&display=swap"
       rel="stylesheet"
     />
 
@@ -80,97 +80,95 @@
     </section>
     <div class="main-container">
       <section id="projects-section">
-        <div class="projex">
-          <h1>Recent Projects</h1>
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="project-tile">
-                <a
-                  href="https://reacting-with-weather-the-app.netlify.app"
-                  target="_blank"
-                >
-                  <img
-                    src="https://i.ibb.co/yBQTZ4T/React-Weather-App-Icon.png"
-                    alt="React Weather App Icon"
-                  />
-                  <label for="React-Weather-App-Icon">
-                    React Weather App
-                  </label>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="project-tile">
-                <a
-                  href="https://product-landing-fcc-project.netlify.app"
-                  target="_blank"
-                  ><img
-                    src="https://i.ibb.co/xFcchjP/Hamboards-Product-Landing-Page-Project.png"
-                    alt="Hamboards product landing page icon"
-                  />
-                  <label for="product-landing-page-icon">
-                    Product Landing Page
-                  </label>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="project-tile">
-                <a href="https://weatherappproject.netlify.app" target="_blank">
-                  <img
-                    src="https://i.ibb.co/SXLqxXr/What-s-The-Weather.png"
-                    alt="Weather App icon"
-                  />
-                  <label for="weather-app-icon">
-                    Weather App
-                  </label>
-                </a>
-              </div>
+        <h1>Recent Projects</h1>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a
+                href="https://reacting-with-weather-the-app.netlify.app"
+                target="_blank"
+              >
+                <img
+                  src="https://i.ibb.co/yBQTZ4T/React-Weather-App-Icon.png"
+                  alt="React Weather App Icon"
+                />
+                <label for="React-Weather-App-Icon">
+                  React Weather App
+                </label>
+              </a>
             </div>
           </div>
-          <span>
-            <a href="https://codepen.io/streetlightkids" target="_blank"
-              ><button>Show More ></button></a
-            >
-          </span>
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a
+                href="https://product-landing-fcc-project.netlify.app"
+                target="_blank"
+                ><img
+                  src="https://i.ibb.co/xFcchjP/Hamboards-Product-Landing-Page-Project.png"
+                  alt="Hamboards product landing page icon"
+                />
+                <label for="product-landing-page-icon">
+                  Product Landing Page
+                </label>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a href="https://weatherappproject.netlify.app" target="_blank">
+                <img
+                  src="https://i.ibb.co/SXLqxXr/What-s-The-Weather.png"
+                  alt="Weather App icon"
+                />
+                <label for="weather-app-icon">
+                  Weather App
+                </label>
+              </a>
+            </div>
+          </div>
         </div>
+        <span>
+          <a href="https://codepen.io/streetlightkids" target="_blank"
+            ><button>Show More ></button></a
+          >
+        </span>
       </section>
       <section id="contact-section">
-        <div class="contax">
-          <div class="row">
-            <div class="col-md-6">
-              <h1>
-                About me
-              </h1>
-              <p>
-                I am an artist and web developer in USA looking for remote work.
-                I enjoy learning new languages (including computer languages)
-                and about other cultures. I am proficient with HTML5, CSS3, ES6,
-                VS Code, Git, and React!
-              </p>
-            </div>
-            <div class="col-md-6">
-              <h1>My Links</h1>
-              <div class="links">
-                <a
-                  href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
-                  target="_blank"
-                  ><button>LinkedIn ></button></a
-                >
-                <a href="https://github.com/streetlightkids" target="_blank"
-                  ><button>GitHub ></button></a
-                >
+        <div class="row">
+          <div class="col-md-6">
+            <h1>
+              About me
+            </h1>
+            <p>
+              I am an artist and web developer in USA looking for remote work. I
+              enjoy learning new languages (including computer languages) and
+              about other cultures. I am proficient with HTML5, CSS3, ES6, VS
+              Code, Git, and React!
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <h1>My Links</h1>
+            <div class="links">
+              <a
+                href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
+                target="_blank"
+                ><button>LinkedIn ></button></a
+              >
+              <a href="https://github.com/streetlightkids" target="_blank"
+                ><button>GitHub ></button></a
+              >
 
-                <a
-                  href="https://app.netlify.com/teams/streetlightkids/sites"
-                  target="_blank"
-                  ><button>Netlify ></button></a
-                >
+              <a
+                href="https://app.netlify.com/teams/streetlightkids/sites"
+                target="_blank"
+                ><button>Netlify ></button></a
+              >
 
-                <a href="mailto:kleinlikecalvin1@gmail.com" target="_blank"
-                  ><button>Email ></button></a
-                >
-              </div>
+              <a href="mailto:kleinlikecalvin1@gmail.com" target="_blank"
+                ><button>Email ></button></a
+              >
             </div>
           </div>
         </div>
