trying to get the contact css right

--- a/index.html
+++ b/index.html
@@ -78,103 +78,101 @@
         </h2>
       </div>
     </section>
-    <div class="main-container">
-      <section id="projects-section">
-        <h1>Recent Projects</h1>
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="project-tile">
-              <a
-                href="https://reacting-with-weather-the-app.netlify.app"
-                target="_blank"
-              >
-                <img
-                  src="https://i.ibb.co/yBQTZ4T/React-Weather-App-Icon.png"
-                  alt="React Weather App Icon"
-                />
-                <label for="React-Weather-App-Icon">
-                  React Weather App
-                </label>
-              </a>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="project-tile">
-              <a
-                href="https://product-landing-fcc-project.netlify.app"
-                target="_blank"
-                ><img
-                  src="https://i.ibb.co/xFcchjP/Hamboards-Product-Landing-Page-Project.png"
-                  alt="Hamboards product landing page icon"
-                />
-                <label for="product-landing-page-icon">
-                  Product Landing Page
-                </label>
-              </a>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="project-tile">
-              <a href="https://weatherappproject.netlify.app" target="_blank">
-                <img
-                  src="https://i.ibb.co/SXLqxXr/What-s-The-Weather.png"
-                  alt="Weather App icon"
-                />
-                <label for="weather-app-icon">
-                  Weather App
-                </label>
-              </a>
-            </div>
+    <section id="projects-section">
+      <h1>Recent Projects</h1>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="project-tile">
+            <a
+              href="https://reacting-with-weather-the-app.netlify.app"
+              target="_blank"
+            >
+              <img
+                src="https://i.ibb.co/yBQTZ4T/React-Weather-App-Icon.png"
+                alt="React Weather App Icon"
+              />
+              <label for="React-Weather-App-Icon">
+                React Weather App
+              </label>
+            </a>
           </div>
         </div>
-        <span>
-          <a href="https://codepen.io/streetlightkids" target="_blank"
-            ><button>Show More ></button></a
-          >
-        </span>
-      </section>
-      <section id="contact-section">
-        <div class="row">
-          <div class="col-md-6">
-            <h1>
-              About me
-            </h1>
-            <p>
-              I am an artist and web developer in USA looking for remote work. I
-              enjoy learning new languages (including computer languages) and
-              about other cultures. I am proficient with HTML5, CSS3, ES6, VS
-              Code, Git, and React!
-            </p>
+        <div class="col-sm-4">
+          <div class="project-tile">
+            <a
+              href="https://product-landing-fcc-project.netlify.app"
+              target="_blank"
+              ><img
+                src="https://i.ibb.co/xFcchjP/Hamboards-Product-Landing-Page-Project.png"
+                alt="Hamboards product landing page icon"
+              />
+              <label for="product-landing-page-icon">
+                Product Landing Page
+              </label>
+            </a>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6">
-            <h1>My Links</h1>
-            <div class="links">
-              <a
-                href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
-                target="_blank"
-                ><button>LinkedIn ></button></a
-              >
-              <a href="https://github.com/streetlightkids" target="_blank"
-                ><button>GitHub ></button></a
-              >
+        <div class="col-sm-4">
+          <div class="project-tile">
+            <a href="https://weatherappproject.netlify.app" target="_blank">
+              <img
+                src="https://i.ibb.co/SXLqxXr/What-s-The-Weather.png"
+                alt="Weather App icon"
+              />
+              <label for="weather-app-icon">
+                Weather App
+              </label>
+            </a>
+          </div>
+        </div>
+      </div>
+      <span>
+        <a href="https://codepen.io/streetlightkids" target="_blank"
+          ><button>Show More ></button></a
+        >
+      </span>
+    </section>
+    <section id="contact-section">
+      <div class="row float-left" id="about-me">
+        <div class="col-md-6">
+          <h1>
+            About me
+          </h1>
+          <p>
+            I am an artist and web developer in USA looking for remote work. I
+            enjoy learning new languages (including computer languages) and
+            about other cultures. I am proficient with HTML5, CSS3, ES6, VS
+            Code, Git, and React!
+          </p>
+        </div>
+      </div>
+      <div class="row float-right" id="my-links">
+        <div class="col-md-6">
+          <h1>My Links</h1>
+          <div class="links">
+            <a
+              href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
+              target="_blank"
+              ><button>LinkedIn ></button></a
+            >
+            <a href="https://github.com/streetlightkids" target="_blank"
+              ><button>GitHub ></button></a
+            >
 
-              <a
-                href="https://app.netlify.com/teams/streetlightkids/sites"
-                target="_blank"
-                ><button>Netlify ></button></a
-              >
+            <a
+              href="https://app.netlify.com/teams/streetlightkids/sites"
+              target="_blank"
+              ><button>Netlify ></button></a
+            >
 
-              <a href="mailto:kleinlikecalvin1@gmail.com" target="_blank"
-                ><button>Email ></button></a
-              >
-            </div>
+            <a href="mailto:kleinlikecalvin1@gmail.com" target="_blank"
+              ><button>Email ></button></a
+            >
           </div>
         </div>
-      </section>
-      <footer>Open source code by <a href="">Nikki Klein</a></footer>
-    </div>
+      </div>
+    </section>
+    <footer>Open source code by <a href="">Nikki Klein</a></footer>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
