fixed full screen view css

--- a/index.html
+++ b/index.html
@@ -133,21 +133,21 @@
       </span>
     </section>
     <section id="contact-section">
-      <div class="row float-left" id="about-me">
-        <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-6" id="about-me">
           <h1>
             About me
           </h1>
           <p>
             I am an artist and web developer in USA looking for remote work. I
-            enjoy learning new languages (including computer languages) and
-            about other cultures. I am proficient with HTML5, CSS3, ES6, VS
-            Code, Git, and React!
+            enjoy learning new languages (including computer languages) and I
+            enjoy learning about other cultures. I am proficient with HTML5,
+            CSS3, ES6, VS Code, Git, and React!
           </p>
         </div>
       </div>
-      <div class="row float-right" id="my-links">
-        <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-6" id="my-links">
           <h1>My Links</h1>
           <div class="links">
             <a
