added url to footer link

--- a/index.html
+++ b/index.html
@@ -172,7 +172,14 @@
         </div>
       </div>
     </section>
-    <footer>Open source code by <a href="">Nikki Klein</a></footer>
+    <footer>
+      Open source code by
+      <a
+        href="https://github.com/streetlightkids/personal-porfolio-fcc-project"
+        target="_blank"
+        >Nikki Klein</a
+      >
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
