added comments to html

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Montserrat&family=PT+Sans&family=VT323&display=swap"
       rel="stylesheet"
     />
-
     <title>Nikki Klein</title>
   </head>
   <body>
+    <!--Start Navbar Section-->
     <nav
       class="navbar navbar-expand-lg navbar-light bg-light sticky-top"
       id="navbar"
@@ -55,6 +55,8 @@
         </ul>
       </div>
     </nav>
+    <!--End Navbar Section-->
+    <!--Start Welcome Section-->
     <section id="welcome-section">
       <div class="welcome">
         <h1>
@@ -78,6 +80,8 @@
         </h2>
       </div>
     </section>
+    <!--End Welcome Section-->
+    <!--Start Projects Section-->
     <section id="projects-section">
       <h1>Recent Projects</h1>
       <div class="row">
@@ -132,6 +136,8 @@
         >
       </span>
     </section>
+    <!--End Projects Section-->
+    <!--Start Contact Section-->
     <section id="contact-section">
       <div class="row">
         <div class="col-md-6" id="about-me">
@@ -172,6 +178,8 @@
         </div>
       </div>
     </section>
+    <!--End Contact Section-->
+    <!--Start Footer Section-->
     <footer>
       Open source code by
       <a
@@ -180,6 +188,7 @@
         >Nikki Klein</a
       >
     </footer>
+    <!--End Footer Section-->
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
