--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             About me
           </h1>
           <p>
-            I am an artist and web developer in USA looking for remote work. I
+            I am a musician and web developer in USA looking for remote work. I
             enjoy learning new languages (including computer languages) and I
             enjoy learning about other cultures. I am proficient with HTML5,
             CSS3, ES6, VS Code, Git, and React!
