added a main container and css

--- a/index.html
+++ b/index.html
@@ -62,138 +62,140 @@
     </nav>
     <!--End Navbar Section-->
     <!--Start Welcome Section-->
-    <section id="welcome-section">
-      <div class="welcome">
-        <h1>
-          Hello World.
-          <br />
-          Salut Monde.
-          <br />
-
-          Ciao Mondo.
-          <br />
-
-          Hola Mundo.
-          <br />
-
-          こんにちは 世間
-          <br />
-          Aloha Honua.
-        </h1>
-        <h2>
-          My name is Nikki and I'm a web developer.
-        </h2>
-      </div>
-    </section>
-    <!--End Welcome Section-->
-    <!--Start Projects Section-->
-    <section id="projects-section">
-      <h1>Recent Projects</h1>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="project-tile">
-            <a
-              href="https://reacting-with-weather-the-app.netlify.app"
-              target="_blank"
-            >
-              <img
-                src="https://i.ibb.co/yBQTZ4T/React-Weather-App-Icon.png"
-                alt="React Weather App Icon"
-              />
-              <label for="React-Weather-App-Icon">
-                React Weather App
-              </label>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="project-tile">
-            <a
-              href="https://product-landing-fcc-project.netlify.app"
-              target="_blank"
-              ><img
-                src="https://i.ibb.co/xFcchjP/Hamboards-Product-Landing-Page-Project.png"
-                alt="Hamboards product landing page icon"
-              />
-              <label for="product-landing-page-icon">
-                Product Landing Page
-              </label>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="project-tile">
-            <a href="https://weatherappproject.netlify.app" target="_blank">
-              <img
-                src="https://i.ibb.co/SXLqxXr/What-s-The-Weather.png"
-                alt="Weather App icon"
-              />
-              <label for="weather-app-icon">
-                Weather App
-              </label>
-            </a>
-          </div>
-        </div>
-      </div>
-      <span>
-        <a href="https://codepen.io/streetlightkids" target="_blank"
-          ><button>Show More ></button></a
-        >
-      </span>
-    </section>
-    <!--End Projects Section-->
-    <!--Start Contact Section-->
-    <section id="contact-section">
-      <div class="row">
-        <div class="col-md-6" id="about-me">
+    <div class="container">
+      <section id="welcome-section">
+        <div class="welcome">
           <h1>
-            About me
+            Hello World.
+            <br />
+            Salut Monde.
+            <br />
+
+            Ciao Mondo.
+            <br />
+
+            Hola Mundo.
+            <br />
+
+            こんにちは 世間
+            <br />
+            Aloha Honua.
           </h1>
-          <p>
-            I am a musician and web developer in USA looking for remote work. I
-            enjoy learning new languages (including computer languages) and I
-            enjoy learning about other cultures. I am proficient with HTML5,
-            CSS3, ES6, VS Code, Git, and React!
-          </p>
+          <h2>
+            My name is Nikki and I'm a web developer.
+          </h2>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6" id="my-links">
-          <h1>My Links</h1>
-          <div class="links">
-            <a
-              href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
-              target="_blank"
-              ><button>LinkedIn ></button></a
-            >
-            <a href="https://github.com/streetlightkids" target="_blank"
-              ><button>GitHub ></button></a
-            >
-
-            <a
-              href="https://app.netlify.com/teams/streetlightkids/sites"
-              target="_blank"
-              ><button>Netlify ></button></a
-            >
-
-            <a href="mailto:kleinlikecalvin1@gmail.com" target="_blank"
-              ><button>Email ></button></a
-            >
+      </section>
+      <!--End Welcome Section-->
+      <!--Start Projects Section-->
+      <section id="projects-section">
+        <h1>Recent Projects</h1>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a
+                href="https://reacting-with-weather-the-app.netlify.app"
+                target="_blank"
+              >
+                <img
+                  src="https://i.ibb.co/yBQTZ4T/React-Weather-App-Icon.png"
+                  alt="React Weather App Icon"
+                />
+                <label for="React-Weather-App-Icon">
+                  React Weather App
+                </label>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a
+                href="https://product-landing-fcc-project.netlify.app"
+                target="_blank"
+                ><img
+                  src="https://i.ibb.co/xFcchjP/Hamboards-Product-Landing-Page-Project.png"
+                  alt="Hamboards product landing page icon"
+                />
+                <label for="product-landing-page-icon">
+                  Product Landing Page
+                </label>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="project-tile">
+              <a href="https://weatherappproject.netlify.app" target="_blank">
+                <img
+                  src="https://i.ibb.co/SXLqxXr/What-s-The-Weather.png"
+                  alt="Weather App icon"
+                />
+                <label for="weather-app-icon">
+                  Weather App
+                </label>
+              </a>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!--End Contact Section-->
-    <!--Start Footer Section-->
-    <footer>
-      Open source code by
-      <a
-        href="https://github.com/streetlightkids/personal-porfolio-fcc-project"
-        target="_blank"
-        >Nikki Klein</a
-      >
-    </footer>
-    <!--End Footer Section-->
+        <span>
+          <a href="https://codepen.io/streetlightkids" target="_blank"
+            ><button>Show More ></button></a
+          >
+        </span>
+      </section>
+      <!--End Projects Section-->
+      <!--Start Contact Section-->
+      <section id="contact-section">
+        <div class="row">
+          <div class="col-md-6" id="about-me">
+            <h1>
+              About me
+            </h1>
+            <p>
+              I am a musician and web developer in USA looking for remote work.
+              I enjoy learning new languages (including computer languages) and
+              I enjoy learning about other cultures. I am proficient with HTML5,
+              CSS3, ES6, VS Code, Git, and React!
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6" id="my-links">
+            <h1>My Links</h1>
+            <div class="links">
+              <a
+                href="https://www.linkedin.com/in/nikki-klein-2b18411b0/"
+                target="_blank"
+                ><button>LinkedIn ></button></a
+              >
+              <a href="https://github.com/streetlightkids" target="_blank"
+                ><button>GitHub ></button></a
+              >
+
+              <a
+                href="https://app.netlify.com/teams/streetlightkids/sites"
+                target="_blank"
+                ><button>Netlify ></button></a
+              >
+
+              <a href="mailto:kleinlikecalvin1@gmail.com" target="_blank"
+                ><button>Email ></button></a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End Contact Section-->
+      <!--Start Footer Section-->
+      <footer>
+        Open source code by
+        <a
+          href="https://github.com/streetlightkids/personal-porfolio-fcc-project"
+          target="_blank"
+          >Nikki Klein</a
+        >
+      </footer>
+      <!--End Footer Section-->
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
