updated html columns

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
     <!--End Navbar Section-->
     <!--Start Welcome Section-->
-    <div class="container">
+    <div class="container-fluid">
       <section id="welcome-section">
         <div class="welcome">
           <h1>
@@ -91,7 +91,7 @@
       <section id="projects-section">
         <h1>Recent Projects</h1>
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm">
             <div class="project-tile">
               <a
                 href="https://reacting-with-weather-the-app.netlify.app"
@@ -107,7 +107,7 @@
               </a>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm">
             <div class="project-tile">
               <a
                 href="https://product-landing-fcc-project.netlify.app"
@@ -122,7 +122,7 @@
               </a>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm">
             <div class="project-tile">
               <a href="https://weatherappproject.netlify.app" target="_blank">
                 <img
@@ -146,7 +146,7 @@
       <!--Start Contact Section-->
       <section id="contact-section">
         <div class="row">
-          <div class="col-md-6" id="about-me">
+          <div class="col-md" id="about-me">
             <h1>
               About me
             </h1>
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6" id="my-links">
+          <div class="col-md" id="my-links">
             <h1>My Links</h1>
             <div class="links">
               <a
