--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!--Start Projects Section-->
       <section id="projects-section">
         <h1>Recent Projects</h1>
-        <div class="row">
+        <div class="row container-fluid">
           <div class="col-sm">
             <div class="project-tile">
               <a
