changed project cols to md

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <section id="projects-section">
         <h1>Recent Projects</h1>
         <div class="row container-fluid">
-          <div class="col-sm">
+          <div class="col-md">
             <div class="project-tile">
               <a
                 href="https://reacting-with-weather-the-app.netlify.app"
@@ -107,7 +107,7 @@
               </a>
             </div>
           </div>
-          <div class="col-sm">
+          <div class="col-md">
             <div class="project-tile">
               <a
                 href="https://product-landing-fcc-project.netlify.app"
@@ -122,7 +122,7 @@
               </a>
             </div>
           </div>
-          <div class="col-sm">
+          <div class="col-md">
             <div class="project-tile">
               <a href="https://weatherappproject.netlify.app" target="_blank">
                 <img
