figured out diagonal page break

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
           >
         </span>
       </section>
+      <div class="diagonal"></div>
       <!--End Projects Section-->
       <!--Start Contact Section-->
       <section id="contact-section">
