changed page title and some code
to pass the necessary tests created by FCC in order to receive Responsive Web Design cert

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Montserrat&family=PT+Sans&family=VT323&display=swap"
       rel="stylesheet"
     />
-    <title>Nikki Klein</title>
+    <title>Hello Nikki Klein</title>
   </head>
   <body>
     <!--Start Navbar Section-->
@@ -88,7 +88,7 @@
       </section>
       <!--End Welcome Section-->
       <!--Start Projects Section-->
-      <section id="projects-section">
+      <section id="projects">
         <h1>Recent Projects</h1>
         <hr />
         <div class="row container-fluid">
@@ -169,7 +169,10 @@
                 target="_blank"
                 ><button>LinkedIn ></button></a
               >
-              <a href="https://github.com/streetlightkids" target="_blank"
+              <a
+                href="https://github.com/streetlightkids"
+                id="profile-link"
+                target="_blank"
                 ><button>GitHub ></button></a
               >
 
